# 21_BS4_PFNN

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/include/: aPfnn.h
code/include/aPFNN/: config.h  contactlabel.h  network.h  phaselabel.h  posedata.h  roottrajectory.h  tensordata.h  utils.h
code/src/: contactlabel.cpp  phaselabel.cpp  posedata.cpp  roottrajectory.cpp  tensordata.cpp  utils.cpp
examples/: 01_contact.cpp  02_posedata.cpp  03_visualization_ex.cpp  04_FCnet_train.cpp  05_FCnet_test.cpp  06_reconstruct_pose.cpp  07_pfnn_train.cpp  08_pfnn_test.cpp  CMakeLists.txt
